--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,14 +1,12 @@
-name: Android APK Build
+name: Build Android APK
 
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -18,17 +16,22 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: temurin
+          java-version: 17
 
+      # 🔴 IMPORTANT FIX: move into android folder
       - name: Grant execute permission for Gradle
-        run: chmod +x gradlew
+        run: |
+          cd android
+          chmod +x gradlew
 
       - name: Build Debug APK
-        run: ./gradlew assembleDebug
+        run: |
+          cd android
+          ./gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug-apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+          name: debug-apk
+          path: android/app/build/outputs/apk/debug/app-debug.apk
