--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,6 +1,8 @@
-name: Build Android APK
+name: Build APK
 
 on:
+  push:
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
@@ -8,18 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      - run: chmod +x gradlew
+      - name: Grant execute permission
+        run: chmod +x gradlew
 
-      - run: ./gradlew :android-app:assembleDebug
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
         with:
-          name: apk
-          path: android-app/build/outputs/apk/debug/*.apk
+          name: app-debug-apk
+          path: "**/app-debug.apk"
