--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,9 +1,7 @@
-name: Build JAR with Gradle
+name: Build JAR
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
     branches: [ "main" ]
   workflow_dispatch:
 
@@ -12,24 +10,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Java
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: temurin
+          java-version: 17
 
-      # If gradlew exists in your repo
-      - name: Grant execute permission for Gradle Wrapper
-        run: chmod +x gradlew
+      - name: Install Gradle
+        uses: gradle/actions/setup-gradle@v4
 
       - name: Build JAR
-        run: ./gradlew build
+        run: gradle build
 
-      - name: Upload JAR file
+      - name: Upload JAR
         uses: actions/upload-artifact@v4
         with:
-          name: jar-output
+          name: jar-file
           path: build/libs/*.jar
